--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rxseger/hackrf-spectograph.git"
+  },
   "version": "0.0.3"
 }
